Modidfied padding and set up of hotel, main, and restaurant.html

--- a/js/hotel-restaurant/main.html
+++ b/js/hotel-restaurant/main.html
@@ -40,7 +40,7 @@
       <a href="/#/" data-reveal-id="hoteles"><img class="squareIMGS" src="img/HOTEL.png"></a>
     </div>
     <div class="large-3 columns asamb info">
-      <img class="squareIMGS" src="img/restaurantes.png">
+      <a href="/#/resraurants"><img class="squareIMGS" src="img/restaurantes.png"></a>
     </div>
   </div>
 </div>
