--- a/js/hotel-restaurant/hotel.html
+++ b/js/hotel-restaurant/hotel.html
@@ -1,7 +1,7 @@
 <div class="large-12 columns">
   <div class="row">
-    <div class="large-12">
-      <h1 class="h1s">Los 10 Hoteles mas cercanos del Von Braun Center</h1>
+    <div class="large-12 columns tophr">
+      <h1 class="h1s">Los 10 Hoteles mas cercanos al Von Braun Center </h1>
     </div>
     <div class="large-12 columns">
       <h3 class="h1s">Embassy Suites | Spa and Hotel</h3>
